<resources>
    <string name="app_name">YongNongPda</string>

    <!--button-->
    <string name="button_reset">重 置</string>
    <string name="button_scan">扫 描</string>
    <string name="button_sure">确 定</string>
    <string name="button_sure_one">确定</string>
    <string name="button_cancel">取 消</string>
    <string name="button_delete">删 除</string>
    <string name="button_upload">上 传</string>
    <string name="button_alter">修 改</string>
    <string name="button_setting">设 置</string>
    <string name="button_pack_up">收 起</string>
    <string name="button_loading">登 录</string>
    <string name="button_next">下一步</string>
    <string name="button_query">查 询</string>
    <string name="button_add">添 加</string>

    <!-- App update -->
    <string name="update_title">检查软件版本</string>
    <string name="update_msg">软件已发现新的版本，赶快下载体验吧</string>
    <string name="update_no">软件没有发现更新的版本</string>
    <string name="download_title">下载软件</string>
    <string name="button_download">下载</string>
    <string name="button_download_data">下载数据</string>
    <string name="button_download_update">更新</string>
    <string name="button_ignore">忽略</string>
    <string name="button_upload_ck_not">无单出库上传</string>
    <string name="button_upload_th_not">无单退货上传</string>
    <string name="button_upload_ck">出库上传</string>
    <string name="button_upload_th">退货上传</string>
    <string name="button_sacanner_input">手动输入</string>
    <string name="button_sacanner_look">查看条码</string>

    <!-- Network -->
    <string name="network_disconnect">网络已断开</string>
    <string name="toast_networkIsExceptional">当前网络存在异常</string>
    <string name="toast_serverNoResponse">请检查网络是否有异常</string>
    <string name="network_wifi_low">网络连接失败</string>
    <string name="network_connected">网络已恢复</string>
    <string name="server_noreponse">服务器无响应</string>

    <!-- msg-->
    <string name="delete_add_success">删除成功</string>
    <string name="code_not_scanned">当前没有扫描的条码</string>
    <string name="code_list">没有选择任何条码</string>
    <string name="code_save_success">保存成功</string>
    <string name="code_scanned">此码已扫描</string>
    <string name="code_checked_list">没有选择任何条码</string>
    <string name="code_input">请输入条码</string>

    <!--toast-->
    <string name="toast_old_password">请输入原始密码</string>
    <string name="toast_old_password_error">原始密码错误，请重新输入</string>
    <string name="toast_new_password">请输入新密码</string>
    <string name="toast_new_password_length">密码长度为6-25字符</string>
    <string name="toast_sure_password">请输入确认密码</string>
    <string name="toast_password_black">密码不能有空格</string>
    <string name="toast_notsame_password">新密码与确认密码不一致，请重新输入</string>
    <string name="toast_select_area">请选择区域</string>
    <string name="toast_input_details_adds">请输入详细地址</string>
    <string name="toast_input_organ_name">请输入客商名称</string>
    <string name="toast_input_out_number">请输入外部编号</string>
    <string name="toast_input_details_adds_length">详细地址长度为3-128个字符</string>
    <string name="toast_input_organ_name_length">客商名称长度为1-25个字符</string>
    <string name="toast_input_organ_name_black">客商名称不能包含空格</string>
    <string name="toast_input_out_number_length">外部编号长度为3-20个字符</string>
    <string name="toast_input_out_number_black">外部编号不能包含空格</string>
    <string name="toast_input_phone">请输入联系电话</string>
    <string name="toast_input_phone_success">请输入正确电话或手机格式(021-12345678 ; 13812345678)</string>
    <string name="toast_input_mobile_success">请输入正确电话或手机格式(021-12345678 ; 13812345678)</string>
    <string name="toast_press_again_quit">再按一次退出程序</string>
    <string name="toast_clear_success">清理成功</string>
    <string name="toast_clear_filed">清理失败</string>
    <string name="toast_code_wl_error">请扫描23位编码</string>
    <string name="toast_code_pn_error">请扫描正确的产品</string>
    <string name="toast_code_unit_error">请扫描正确产品码</string>
    <string name="toast_file_not_exist">文件不能空</string>
    <string name="toast_idcode_has_no_scanned">没有扫描记录</string>
    <string name="toast_idcode_upload_success">文件上传成功</string>
    <string name="toast_contants">请联系管理员，修正当前出现的异常</string>
    <string name="toast_login_expire">登录过期，请重新登录</string>
    <string name="toast_not_records">无相关记录</string>
    <string name="toast_code_cannot_find">该编码不能匹配规则</string>
    <string name="toast_log_cannot_msg">当前无日志信息</string>

    <!--title-->
    <string name="title_scanned_out">出库管理</string>
    <string name="title_scanned_file">文件管理</string>
    <string name="title_scanned_system">系统管理</string>
    <string name="title_scanned_not_return">无单退货</string>
    <string name="title_scanned_zs">物流追踪</string>
    <string name="title_progress_add">新增中</string>
    <string name="title_progress_edit">修改中</string>
    <string name="title_home">主页</string>
    <string name="title_scan">扫描</string>
    <string name="title_history">历史</string>
    <string name="title_more">更多</string>
    <string name="title_out">出库管理</string>
    <string name="title_in">入库管理</string>
    <string name="title_return">退货管理</string>
    <string name="title_deleteCode">删除条码</string>
    <string name="title_uploadFiles">上传文件</string>
    <string name="title_uploadLog">上传日志</string>
    <string name="title_log_des">日志详情</string>
    <string name="title_updateData">更新数据</string>
    <string name="title_alter_password">修改密码</string>

    <!-- TextView text -->
    <string name="textview_scanprompt">将取景器对准要扫描的条形码或二维码</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机可能被占用，您可能需要重启设备。</string>
    <!--pda textview-->
    <string name="tv_bill_upload">单据下载</string>
    <string name="tv_not_bill_out">无单出库</string>
    <string name="tv_have_bill_out">有单出库</string>
    <string name="tv_not_bill_in">无单入库</string>
    <string name="tv_have_bill_in">有单入库</string>
    <string name="tv_not_bill_return">无单退货</string>
    <string name="tv_have_bill_return">有单退货</string>
    <string name="tv_upload_in">入库上传</string>
    <string name="tv_upload_out">出库上传</string>
    <string name="tv_upload_change">转仓上传</string>
    <string name="tv_upload_return">退货上传</string>
</resources>
