<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.yongnongpda.MainActivity">

    <RelativeLayout
        android:id="@id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="60dp"></RelativeLayout>


    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/size_18"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/c_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="当前身份： 管理员" />

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/size_18"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/c_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="当前用户： admin" />


        <Button
            android:id="@+id/btnScan"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/bg_white_button_selector"
            android:text="@string/title_scanned_out"
            android:textColor="@color/c_white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnFileManger"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/bg_white_button_selector"
            android:text="@string/title_scanned_file"
            android:textColor="@color/c_white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSystemManger"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="@dimen/margin_15"
            android:background="@drawable/bg_white_button_selector"
            android:text="@string/title_scanned_system"
            android:textColor="@color/c_white"
            android:textSize="18sp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
