<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="60dp"></RelativeLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10">

        <TextView
            android:textColor="@color/c_black"
            android:textSize="@dimen/size_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="客商编号" />

        <EditText
            android:textColor="@color/c_black"
            android:textSize="@dimen/size_16"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:background="@drawable/edittext_bg" />

        <Button
            android:id="@+id/btnQuery"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/bg_white_button_selector"
            android:text="@string/button_query"
            android:textColor="@color/c_white"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/header_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/c_black"
            android:textSize="@dimen/size_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="客商编号" />

        <TextView
            android:textColor="@color/c_black"
            android:textSize="@dimen/size_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="名称" />

        <TextView
            android:textColor="@color/c_black"
            android:textSize="@dimen/size_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="地址" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="@dimen/margin_8">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_button_selector"
            android:text="@string/button_add"
            android:textColor="@color/c_white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAlert"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_button_selector"
            android:text="@string/button_alter"
            android:textColor="@color/c_white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_white_button_selector"
            android:text="@string/button_delete"
            android:textColor="@color/c_white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>

