<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/header_title"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_50"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_aic_01"
            android:drawablePadding="@dimen/margin_5"
            android:hint="用户"
            android:maxLines="1"
            android:paddingLeft="3dp"
            android:textColor="@color/c_white"
            android:textColorHint="@color/c_white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/c_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/login_aic_02"
            android:drawablePadding="@dimen/margin_5"
            android:hint="密码"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="3dp"
            android:textColor="@color/c_white"
            android:textColorHint="@color/c_white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/c_white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbRemberPassword"
            style="@style/customCheckBoxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:checked="true"
            android:paddingLeft="@dimen/margin_20"
            android:text="记住密码"
            android:textColor="@color/c_white"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@drawable/bg_shap_white"
        android:text="@string/button_loading"
        android:textColor="@color/c_white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@drawable/bg_white_button_selector"
        android:text="@string/button_setting"
        android:textColor="@color/c_white"
        android:textSize="18sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/showUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="@dimen/margin_10"
        android:visibility="gone">

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textColor="@color/c_white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnSure"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_white_button_selector"
            android:text="@string/button_sure_one"
            android:textColor="@color/c_white"
            android:textSize="14sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="bottom">

        <TextView
            android:id="@+id/tvImei"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="@color/c_white"
            android:textSize="@dimen/size_14" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/c_white"
            android:textSize="@dimen/size_14" />

    </RelativeLayout>

</LinearLayout>